# refactoring

./: .coverage  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-app.yml  tagger.yml
src/refactoring/: __init__.py  run.py  statement.py
tests/: test_statements.py
