[project]
name = "refactoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Denney", email = "chris.j.denney@gmail.com" }
]
requires-python = ">=3.12.7"
dependencies = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]

[project.scripts]
refactoring = "refactoring:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
