[project]
name = "refactoring"
version = "1.0.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Denney", email = "chris.j.denney@gmail.com" }
]
requires-python = ">=3.12.7"
dependencies = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]

[project.scripts]
refactoring = "refactoring.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=4.2.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
